# myterm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  installer.iss  manual_err.txt  manual_out.txt
.dev/appdata/myterm/: config
.github/workflows/: ci.yml  release.yml
installer/: myterm.iss
scripts/: dev.ps1
src/: config.c  config.h  input.c  main.c  myterm.h  native_tabs_windows.c  native_tabs_windows.h  pty_unix.c  pty_windows.c  renderer.c  search.c  search.h  splits.c  splits.h  tabs.c  tabs.h  terminal.c  terminal_internal.h
src/ghostty/: ghostty.h
tests/: Makefile  smoke_shell_helper.c  smoke_test.ps1  stubs.c  test_config.c  test_harness.h  test_release.sh  test_search.c  test_splits.c  test_tabs.c
